# database

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  NEWDB_CTOR_FACADE_PLANNER_PIPELINE_架构解析.md  README.en.md  README.md  readme.md
benchmarks/: CMakeLists.txt  MDB_E2E_PEAK_PERFORMANCE.md  README.md  compaction_bench.cpp  engine_bench.cpp  memtable_bench.cpp  wal_bench.cpp
benchmarks/baselines/: mdb_bulk_insert_peak.json  mdb_query_complex_baseline.json  mega_data_baseline.json  mega_data_working_set_wave4.json  oltp_persist_baseline.json  structdb_bench_baseline.json  structdb_bench_run_20260516_163537.json  structdb_bench_run_20260516_163559.json
benchmarks/scripts/: compare_bench.py  compare_mdb_query_summary.py  compare_mega_summary.py  promote_mdb_query_baseline.py
gtest_capi/: CMakeLists.txt
gtest_capi/include/: gtest_capi.h
gui/rust_gui/src-tauri/: Cargo.toml  tauri.conf.json
newdb/: .gitignore  CMakeLists.txt  CMakePresets.json  demodb.walsync.conf
newdb/.github/workflows/: newdb-ci.yml  newdb-gui.yml  newdb-nightly-soak.yml  newdb-security.yml
newdb/cli/app/: demo_main.cc
newdb/demo/: bptree_index.cc  bptree_index.h  condition.cc  constants.h  covering_index_sidecar.cc  demo_cli.cpp  demo_commands.cc  demo_diag.cc  demo_export.cc  demo_main.cc  demo_runner.cc  demo_runner.h  demo_shell.cc  eq_bloom.cc  equality_index_sidecar.cc  equality_index_sidecar.h  import.cc  logging.cc  logging.h  page_index_sidecar.cc  result.h  schema_catalog.cc  shell_state.h  sidecar_wal_lsn.cpp  sidecar_wal_lsn.h  table_view.cc  txn_manager.cc  txn_manager.h  utils.cc  visibility_checkpoint_sidecar.cc  visibility_checkpoint_sidecar.h  where.cc  where.h
newdb/docs/: BRANCH_PROTECTION_BASELINE.md  C_API_ABI_MATRIX.md  C_API_ERROR_HANDLING.md  C_API_THREAD_SAFETY.md  MODULE_BOUNDARIES.md  NEWDB_DESIGN_POINT_TO_FILE_MAP.md  README.md
newdb/docs/api/: C_API_ABI_MATRIX.md  C_API_ERROR_HANDLING.md  C_API_THREAD_SAFETY.md
newdb/docs/architecture/: DECOUPLING_ROADMAP.md  MODULE_BOUNDARIES.md  MULTI_REPO_PACKAGING.md  NEWDB_DESIGN_POINT_TO_FILE_MAP.md  NEWDB_QUERY_LAYER.md  PROJECT_DATAFLOW_WHOLE.md  PROJECT_DATAFLOW_WHOLE_详解.md
newdb/docs/ci/: PERF_AND_CI_BUDGETS.md
newdb/docs/dev/: BUILD.md  CI_SLIM_FULL_MATRIX.md  CORE_SHELL_INCLUDE_BOUNDARY.md  C_API_CAPABILITY_TIERS.md  C_API_PLUGIN_BACKEND.md  ENGINE_SESSION_HANDLE.md  RELEASE_PUBLISHING.md  RUNTIME_STATS_JSON_LAYERING.md  SHELL_STATE_INCLUDE_AUDIT.md  SHELL_STATE_LAYERING.md  WAVE9_SESSION_DECOUPLING.md
newdb/docs/roadmap/: COMPARE_LEVELDB_INNODB_ROADMAP.md  CURRENT_DATABASE_EVALUATION_AND_RECOMMENDATIONS.md  NEWDB_FILE_LEVEL_MODIFICATION_PLAN.md  NEWDB_OPTIMIZATION_ASSESSMENT_AND_PLAN.md  OPTIMIZATION_PLAN_2026.md
newdb/docs/storage/: STORAGE_GOVERNANCE_AND_RECOVERY_BUDGETS.md
newdb/docs/testing/: ENVIRONMENT_BASELINE.md  TESTS_FAULT_INJECTION_AND_TXN_MATRIX.md  TXN_CHAIN_MATURITY.md
newdb/docs/txn/: TXN_ISOLATION_AND_LOCKING.md
newdb/engine/include/: endian.h
newdb/include/: gtest_capi.h
newdb/include/crc32c/: crc32c.h
newdb/include/newdb/: c_api.h  error_format.h  heap_file_read_view.h  mvcc.h  page_io.h  row.h  schema.h  schema_io.h  session.h  wal_codec.h  wal_manager.h
newdb/intro/: README.md  build_wsl.sh  latexmkrc  main.tex
newdb/intro/01-overview/: section.tex
newdb/intro/02-heap-page/: section.tex
newdb/intro/03-heap-io/: section.tex
newdb/intro/04-heap-table/: section.tex
newdb/intro/05-mvcc/: section.tex
newdb/intro/06-wal/: section.tex
newdb/intro/09-demo-mid/: section.tex
newdb/rust_gui/: README.md  TEST_CASES.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
newdb/scripts/: README.md  query_bench.mdb  txn_wal_vacuum_test.mdb
newdb/src/: c_api.cpp  catalog.cpp  heap_file_read_view.cpp  heap_page_waterfall.cpp  heap_table.cpp  mvcc.cpp  page_io.cpp  schema.cpp  tuple_codec.cpp  wal_codec.cpp  wal_manager.cpp
newdb/tests/: gtest_c_api.cpp  shell_state_test_support.cc  shell_state_test_support.h  test_c_api.cpp  test_c_api_slim.cpp  test_catalog.cpp  test_ci_microbench.cpp  test_cli_backend_plugin_smoke.cpp  test_covering_index_sidecar.cpp  test_covering_projection_sidecar.cpp  test_demo_cli.cpp  test_demo_logging_history.cpp  test_demo_lsm_lite.cpp  test_demo_mdb_stop.cpp  test_demo_page_keyset.cpp  test_demo_schema_catalog.cpp  test_demo_txn_wal.cpp  test_demo_utils.cpp  test_demo_where.cpp  test_demo_where_batch_dml.cpp  test_dispatch_routing.cpp  test_eq_bloom.cpp  test_eq_sidecar_admit.cpp  test_eq_sidecar_bucket.cpp  test_error_format.cpp  test_heap_page.cpp  test_heap_table.cpp  test_index_catalog.cpp  test_lsm_lite_engine.cpp  test_memory_registry.cpp  test_mvcc_visibility.cpp  test_page_cache.cpp  test_page_io.cpp  test_query_table_stats.cpp  test_recovery_undo_chain.cpp  test_schema.cpp  test_schema_io.cpp  test_session.cpp  test_shell_state_test_support.cpp  test_show_plan_table_stats_stale_shell.cpp  (+25 more)
newdb/tools/: audit_object_includes.py  count_bridge_dispatch_includes.py  count_shell_state_includes.py  newdb_concurrent_perf.cpp  newdb_perf.cpp  newdb_runtime_report.cpp  newdb_smoke.cpp
src/Base/: CMakeLists.txt  Makefile  readme.md
src/app/: CMakeLists.txt  main.cpp
src/c_api/: CMakeLists.txt
tests/: CMakeLists.txt  capi_shared_smoke.cpp  capi_test.cpp  mdb_tests.cpp  structdb_tests.cpp  test_artifact_config.hpp.in  test_artifact_env.cpp  test_artifact_env.hpp
waterfall/: CMakeLists.txt  config.h
waterfall/io/: Makefile  channel.cc  channel.h  coro.cc  reactor.h  scheduler.cc  service.cc  service.h  strand.cc  strand.h  test_reactor.cc  test_service.cc  test_task.cc  test_timer.cc  test_uring.cc  thread.h  thread_pool.cc  timer.cc  timer.h
waterfall/meta/: static_hash.h  type_index.h
waterfall/schema/: datatype.h  db.h  relation.h  scn.cc  user.h
waterfall/storage/: page.h  record.cc  record.h  segment.h  test_record.cc
waterfall/transation/: hold_rw_latch.h
waterfall/utils/: arena.cc  call_stack.h  crc32c_compat.cc  error.h  leb128.h  noncopyable.h  test_crc32c.cc  test_noncopyable.cc  test_roaring.cc
(+889 files in other folders)
